--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="#" onclick="scrollToSection('spatial');">Spatial Analysis</a>
     <a href="#" onclick="scrollToSection('tools');">Tools</a>
     <a href="#" onclick="scrollToSection('open');">Open Source</a>
-    <a href="#" onclick="scrollToSection('data');">Data Sources</a>
+<!--    <a href="#" onclick="scrollToSection('data');">Data Sources</a> -->
     <a href="#" onclick="scrollToSection('about');">About & Contact</a>
   </nav>
 </header>
@@ -56,9 +56,9 @@
 
   <div class="flex-column">
 	<h2 id="map">Map Making</h2><hr>
-    <p>Working in a number of styles: thematic, topographic, vector and more.</p><br>
-    <p><a href="https://geographyclub.github.io" target="_blank" target="_blank">Geography Works</a></p><p>A growing library of maps in svg format that anyone can embed on the web or edit in vector editing software.</p><br>
-    <p><a href="https://github.com/geographyclub/svgeo" target="_blank">SVGeo</a></p><p>A growing library of maps in svg format that anyone can embed on the web or edit in vector editing software.</p><br>
+    <p>Working in a number of styles: thematic, topographic, vector, illustration and more.</p><br>
+    <p><a href="https://geographyclub.github.io" target="_blank" target="_blank">Geography Works</a></p><p>A portfolio of my work on GitHub, showcasing some traditional and not-so-traditional maps.</p><br>
+    <p><a href="https://github.com/geographyclub/svgeo" target="_blank">SVGeo</a></p><p>A growing library of basemaps in svg format that anyone can embed on the web or edit in vector editing software.</p><br>
     <p>Consistently posting maps in progress and short tutorials on my Twitter account. Follow me <a href="https://twitter.com/newgeographer2" target="_blank">@newgeographer2</a>.</p>
   </div>
 
@@ -70,7 +70,7 @@
 
   <div class="flex-column">
 	<h2 id="spatial">Spatial Analysis</h2><hr>
-    <p>Over 15 years of spatial data processing and analysis with Linux scripting and spatial software.</p><br>
+    <p>Over 15 years of experience in spatial data processing, databasing, visualization and analysis. Areas of interest:</p><br>
 	<h3>Weather</h3>
     <p>Working with global forecasts of potential weather scenarios from the Canadian GEM model. Also, current weather reports of temperature, sky condition, humidity and wind from over 5,000 METAR stations around the world.</p><br>
 	<h3>Remote Sensing</h3>
@@ -87,12 +87,12 @@
   <div class="flex-column">
 	<h2 id="open">Open Source</h2><hr>
 	<p>Ask me how to reach an engaged and knowledgeable audience thru open source.</p><br>
-	<p>For a glimpse into how I use spatial software to make maps and analyses, see these open source repositories:</p><br>
+	<p>For a glimpse at how I use spatial software to make maps and analyses, see these open source repositories:</p><br>
   	<p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
     <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
     <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p>
   </div>
-
+<!--
   <div class="flex-column">
 	<h2 id="data">Data Sources</h2><hr>
     <p>Global forecasts of potential weather scenarios up to 16 days at 10 to 15km resolution from the <a href="https://www.weather.gc.ca/ensemble/index_e.html" target="_blank">Canadian GEM model</a>.</p><br>
@@ -119,7 +119,7 @@
 
     <p>Population and housing information from the US Census <a href="https://www.census.gov/programs-surveys/acs/" target="_blank">American Community Survey</a>.</p>
   </div>
-
+-->
 <div class="flex-column-wide footer">
 <h2 id="about">About</h2>
 <hr>
