--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   <div class="flex-column">
     <h2 id="web">Web Development</h2><hr>
     <p>Making single-purpose websites out of geographic datasets.</p><br>
-    <p><a href="https://geographyclub.github.io/american-geography" target="_blank">American Geography</a></p><p>Quick yet revealing look at how States rank in random census categories. Serving the latest figures from the American Community Survey.</p><br>
+    <p><a href="https://geographyclub.github.io/american-geography" target="_blank">American Geography</a></p><p>Quick yet revealing look at how States rank in every census category. Serving the latest figures from the American Community Survey.</p><br>
     <p><a href="https://geographyclub.github.io/factbook" target="_blank">World Factbook Scraper</a></p><p>A feed of random country facts. Retrieves and parses World Factbook JSON files on-the-fly, with over 250 custom maps.</p><br>
-    <p><a href="https://geographyclub.github.io/asean" target="_blank">ASEAN Primer</a></p><p>A tidy economic summary of ASEAN nations, with a colorful ranking system and custom regional map.</p>
+    <p><a href="https://geographyclub.github.io/asean" target="_blank">ASEAN Primer</a></p><p>A tidy economic summary of ASEAN nations, with colors and custom regional map.</p>
   </div>
 
   <div class="flex-column">
@@ -57,7 +57,7 @@
   <div class="flex-column">
 	<h2 id="map">Map Making</h2><hr>
     <p>Working in a number of styles: thematic, topographic, vector, illustration and more.</p><br>
-    <p><a href="https://geographyclub.github.io" target="_blank" target="_blank">Geography Works</a></p><p>A portfolio of my work on GitHub, showcasing some traditional and not-so-traditional maps.</p><br>
+    <p><a href="https://geographyclub.github.io" target="_blank" target="_blank">Geography Works</a></p><p>A portfolio of my work on GitHub, showcasing a few map styles.</p><br>
     <p><a href="https://github.com/geographyclub/svgeo" target="_blank">SVGeo</a></p><p>A growing library of basemaps in svg format that anyone can embed on the web or edit in vector editing software.</p><br>
     <p>Consistently posting maps in progress and short tutorials on my Twitter account. Follow me <a href="https://twitter.com/newgeographer2" target="_blank">@newgeographer2</a>.</p>
   </div>
