--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	<h3>Remote Sensing</h3>
     <p>Doing terrain and hydrological analysis on global 30m and 90m digital elevation models from ALOS and SRTM. Also, image classification and vegetation indexing on medium-resolution multispectral imagery from Landsat and MODIS.</p><br>
 	<h3>Planning & Development</h3>
-    <p>Working with OpenStreetMap geographic and tag data to explore spatial relationships in the city and beyond. For example, looking at the connection between amenities, infrastructure and other street-level data to population and housing data from the US Census American Community Survey.</p>
+    <p>Working with OpenStreetMap geographic and tag data to explore spatial relationships in the city. Like looking at amenities, infrastructure and other street-level data against population and housing data from the US Census.</p>
   </div>
 
   <div class="flex-column">
@@ -87,7 +87,7 @@
   <div class="flex-column">
 	<h2 id="open">Open Source</h2><hr>
 	<p>Ask me how to reach an engaged and knowledgeable audience thru open source.</p><br>
-	<p>For a glimpse at how I use spatial software to make maps and analyses, see these open source repositories:</p><br>
+	<p>Sharing my work at these open-source repositories:</p><br>
   	<p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
     <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
     <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p>
