--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	<h2 id="spatial">Spatial Analysis</h2><hr>
     <p>Over 15 years of experience in spatial data processing, databasing, visualization and analysis. Areas of interest:</p><br>
 	<h3>Weather</h3>
-    <p>Working with global forecasts of potential weather scenarios from the Canadian GEM model. Also, current weather reports of temperature, sky condition, humidity and wind from over 5,000 METAR stations around the world.</p><br>
+    <p>Working with global forecasts of potential weather scenarios from the Canadian GEM model. Also, current weather reports of temperature, sky condition, humidity and wind from METAR data.</p><br>
 	<h3>Remote Sensing</h3>
     <p>Doing terrain and hydrological analysis on global 30m and 90m digital elevation models from ALOS and SRTM. Also, image classification and vegetation indexing on medium-resolution multispectral imagery from Landsat and MODIS.</p><br>
 	<h3>Planning & Development</h3>
