--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	<h3>Remote Sensing</h3>
     <p>Doing terrain and hydrological analysis on global 30m and 90m digital elevation models from ALOS and SRTM. Also, image classification and vegetation indexing on medium-resolution multispectral imagery from Landsat and MODIS.</p><br>
 	<h3>Planning & Development</h3>
-    <p>Working with OpenStreetMap geographic and tag data to explore spatial relationships in the city. Like looking at amenities, infrastructure and other street-level data against population and housing data from the US Census.</p>
+    <p>Working with OpenStreetMap geographic and tag data to explore spatial relationships in the city. For example, looking at amenities, infrastructure and other street-level data against population and housing data from the US Census.</p>
   </div>
 
   <div class="flex-column">
