--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	<h3>Weather</h3>
     <p>Working with global forecasts of potential weather scenarios from the Canadian GEM model. Also, current weather reports of temperature, sky condition, humidity and wind from METAR data.</p><br>
 	<h3>Remote Sensing</h3>
-    <p>Doing terrain and hydrological analysis on global 30m and 90m digital elevation models from ALOS and SRTM. Also, image classification and vegetation indexing on medium-resolution multispectral imagery from Landsat and MODIS.</p><br>
+    <p>Doing terrain and hydrological analysis on global 30m and 90m digital elevation models from ALOS and SRTM. Also, image classification and vegetation indexing on Landsat and MODIS imagery.</p><br>
 	<h3>Planning & Development</h3>
     <p>Working with OpenStreetMap geographic and tag data to explore spatial relationships in the city. For example, looking at amenities, infrastructure and other street-level data against population and housing data from the US Census.</p>
   </div>
