--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <div class="flex-column">
 	<h2 id="map">Map Making</h2><hr>
-    <p>Working in a number of styles: thematic, topographic, vector, illustration and more.</p><br>
+    <p>Working in a number of styles: thematic, topographic, vector and illustration.</p><br>
     <p><a href="https://geographyclub.github.io" target="_blank" target="_blank">Geography Works</a></p><p>A portfolio of my work on GitHub, showcasing a few map styles.</p><br>
     <p><a href="https://github.com/geographyclub/svgeo" target="_blank">SVGeo</a></p><p>A growing library of basemaps in svg format that anyone can embed on the web or edit in vector editing software.</p><br>
     <p>Consistently posting maps in progress and short tutorials on my Twitter account. Follow me <a href="https://twitter.com/newgeographer2" target="_blank">@newgeographer2</a>.</p>
