--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <div class="flex-column">
 	<h2 id="spatial">Spatial Analysis</h2><hr>
-    <p>Over 15 years of experience in spatial data processing, visualization and analysis. Areas of interest:</p><br>
+    <p>Spatial data processing in Linux and PostgreSQL/PostGIS, visualization and analysis in QGIS, GRASS GIS and R. Areas of interest:</p><br>
 	<h3>Weather</h3>
     <p>Working with global forecasts of potential weather scenarios from the Canadian GEM model. Also, current weather reports of temperature, sky condition, humidity and wind from METAR data.</p><br>
 	<h3>Remote Sensing</h3>
@@ -87,7 +87,7 @@
   <div class="flex-column">
 	<h2 id="open">Open Source</h2><hr>
 	<p>Ask me how to reach an engaged and knowledgeable audience thru open source.</p><br>
-	<p>Sharing most of my work at these open-source repositories:</p><br>
+	<p>Sharing most of my work at these open source repositories:</p><br>
   	<p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
     <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
     <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p>
