--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
 
   <div class="flex-column">
 	<h2 id="open">Open Source</h2><hr>
-	<p>Ask me how to reach an engaged and knowledgeable audience thru open source.</p><br>
-	<p>Sharing most of my work at these open source repositories:</p><br>
+	<p>Sharing most of my work thru these open source repositories:</p><br>
   	<p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
     <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
     <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p>
