--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <div class="flex-column">
 	<h2 id="spatial">Spatial Analysis</h2><hr>
-    <p>Spatial data processing in Linux and PostgreSQL/PostGIS, visualization and analysis in QGIS, GRASS GIS and R. Areas of interest:</p><br>
+    <p>Data processing, visualization and analysis in Linux using PostgreSQL/PostGIS, QGIS, GRASS GIS and R. Areas of interest:</p><br>
 	<h3>Weather</h3>
     <p>Working with global forecasts of potential weather scenarios from the Canadian GEM model. Also, current weather reports of temperature, sky condition, humidity and wind from METAR data.</p><br>
 	<h3>Remote Sensing</h3>
