--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <p>Making single-purpose websites out of geographic datasets.</p><br>
     <p><a href="https://geographyclub.github.io/american-geography" target="_blank">American Geography</a></p><p>Quick yet revealing look at how States rank in every census category. Serving the latest figures from the American Community Survey.</p><br>
     <p><a href="https://geographyclub.github.io/factbook" target="_blank">World Factbook Scraper</a></p><p>A feed of random country facts. Retrieves and parses World Factbook JSON files on-the-fly, with over 250 custom maps.</p><br>
-    <p><a href="https://geographyclub.github.io/asean" target="_blank">ASEAN Primer</a></p><p>A tidy economic summary of ASEAN nations, with colors and custom regional map.</p>
+    <p><a href="https://geographyclub.github.io/asean" target="_blank">ASEAN Primer</a></p><p>A tidy economic summary of ASEAN nations, with colored ranking and custom regional map.</p>
   </div>
 
   <div class="flex-column">
