--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
   </div>
 
   <div class="flex-column">
-	<h2 id="tools">Tools</h2><hr>
-  	<span class="tag-red">QGIS</span><span class="tag-red">GDAL/OGR</span><span class="tag-red">GRASS GIS</span><span class="tag-orange">HTML</span><span class="tag-orange">CSS</span><span class="tag-orange">JS</span><span class="tag-orange">LeafletJS</span><span class="tag-green">PostGIS</span><span class="tag-green">PostgreSQL</span><span class="tag-blue">Linux</span><span class="tag-blue">R</span><span class="tag-blue">Python</span>
+    <div class="image-container">
+      <img class="image" src="img/doubletake.png">
+    </div>
   </div>
 
   <div class="flex-column">
@@ -92,6 +93,12 @@
     <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
     <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p>
   </div>
+
+  <div class="flex-column">
+	<h2 id="tools">Tools</h2><hr>
+  	<span class="tag-red">QGIS</span><span class="tag-red">GDAL/OGR</span><span class="tag-red">GRASS GIS</span><span class="tag-orange">HTML</span><span class="tag-orange">CSS</span><span class="tag-orange">JS</span><span class="tag-orange">LeafletJS</span><span class="tag-green">PostGIS</span><span class="tag-green">PostgreSQL</span><span class="tag-blue">Linux</span><span class="tag-blue">R</span><span class="tag-blue">Python</span>
+  </div>
+
 <!--
   <div class="flex-column">
 	<h2 id="data">Data Sources</h2><hr>
