--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <div class="flex-column">
     <div class="image-container">
-      <img class="image" src="img/doubletake.png">
+      <img class="image" src="img/cali.png">
     </div>
   </div>
 
