--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <div class="flex-column">
     <div class="image-container">
-      <img class="image" src="img/doubletake-0.png">
+      <img class="image" src="img/cali.png">
     </div>
   </div>
 
@@ -65,7 +65,7 @@
 
   <div class="flex-column">
     <div class="image-container">
-      <img class="image" src="img/doubletake-1.png">
+      <img class="image" src="img/chicago.png">
     </div>
   </div>
 
@@ -82,7 +82,7 @@
 
   <div class="flex-column">
     <div class="image-container">
-      <img class="image" src="img/cali.png">
+      <img class="image" src="img/doubletake.png">
     </div>
   </div>
 
