--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	<h2 id="spatial">Spatial Analysis</h2><hr>
     <p>Data processing, visualization and analysis in Linux using PostgreSQL/PostGIS, QGIS, GRASS GIS and R. Areas of interest:</p><br>
 	<h3>Weather</h3>
-    <p>Working with global forecasts of potential weather scenarios from the Canadian GEM model. Also, current weather reports of temperature, sky condition, humidity and wind from METAR data.</p><br>
+    <p>Working with global forecasts of potential weather scenarios from the Canadian GEM model. Also, current meteorology data from METAR reports.</p><br>
 	<h3>Remote Sensing</h3>
     <p>Doing terrain and hydrological analysis on global 30m and 90m digital elevation models from ALOS and SRTM. Also, image classification and vegetation indices on Landsat and MODIS imagery.</p><br>
 	<h3>Planning & Development</h3>
