--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
   <div class="flex-column">
 	<h2 id="spatial">Spatial Analysis</h2><hr>
-    <p>Data processing, visualization and analysis in Linux using PostgreSQL/PostGIS, QGIS, GRASS GIS and R. Areas of interest:</p><br>
+    <p>Data processing, visualization and analysis in Linux and open source software. Areas of interest:</p><br>
 	<h3>Weather</h3>
     <p>Working with global forecasts of potential weather scenarios from the Canadian GEM model. Also, current meteorology data from METAR reports.</p><br>
 	<h3>Remote Sensing</h3>
