--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <div class="flex-column">
     <div class="image-container">
-      <img class="image" src="img/doubletake.png">
+      <img class="image" src="img/miami.png">
     </div>
   </div>
 
@@ -92,6 +92,12 @@
   	<p><a href="https://github.com/geographyclub/gis-from-command-line" target="_blank">GIS From Command Line</a></p><p>All the software and scripts you need to make Linux a complete Geographic Information System from command line.</p><br>
     <p><a href="https://github.com/geographyclub/qgis-expressions" target="_blank">QGIS Expressions</a></p><p>A big list of useful expressions to manipulate geographic features in the open source mapping software QGIS.</p><br>
     <p><a href="https://github.com/geographyclub/postgis-cookbook" target="_blank">PostGIS Cookbook</a></p><p>A big list of SQL commands and shell scripts for cooking with the geospatial database PostgreSQL/PostGIS.</p>
+  </div>
+
+  <div class="flex-column">
+    <div class="image-container">
+      <img class="image" src="img/yellow_corrected.png">
+    </div>
   </div>
 
   <div class="flex-column">
