--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <div class="flex-column">
     <div class="image-container">
-      <img class="image" src="img/yellow_corrected.png">
+      <img class="image" src="img/doubletake.png">
     </div>
   </div>
 
